display 3 channel difficulties on Overview
Former-commit-id: 30994fceed1c9c0694cd52bcc078e16f92e98115

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -2,6 +2,9 @@
   "overview.TrustWeight": "Trust Weight",
   "overview.LicensceAgreement": "License Agreement",
   "overview.BlockWeightt": "Block Weight",
+  "overview.PrimeDiff": "Prime difficulty",
+  "overview.HashDiff": "Hash difficulty",
+  "overview.StakeDiff": "Stake difficulty",
   "overview.Balance": "Balance",
   "overview.EncryptedModal": "Your Wallet Is Not Encrypted!",
   "overview.Suggestion": "You really should encrypt your wallet to keep your NXS safe.",
