sync issue fixed
Former-commit-id: bfe3fb4eb2283439b3ef13f195e169be4bda765d

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -383,7 +383,7 @@
   "Header.UnlockedUntil": "Logged in until {unlockDate}",
   "Header.StakingOnly": "for staking only",
   "Header.Synced": "Synchronized",
-  "Header.Syncing": "Synchronizing...\n{blocks} blocks behind",
+  "Header.Syncing": "Synchronizing...",
   "Header.Blocks": "Blocks",
   "Header.DaemonNotLoaded": "Daemon Not Loaded",
 
