All language files now use the same sync spelling.
Former-commit-id: a8ac9adc0b283167aabc14e04cb5366246058fa0

--- a/app/languages/de.json
+++ b/app/languages/de.json
@@ -376,7 +376,7 @@
   "Header.UnlockedUntil": "Entsperrt bis {unlockDate}",
   "Header.StakingOnly": "Nur zum Staken entsperrt",
   "Header.Synced": "Synchronisiert",
-  "Header.Synching": "Synchronisiere...\n Blöcke fehlen noch\n",
+  "Header.Syncing": "Synchronisiere...\n Blöcke fehlen noch\n",
   "Header.Blocks": "Blöcke",
   "Header.DaemonNotLoaded": "Daemon nicht geladen",
 
