Footer update together with Navigation index,js
Former-commit-id: 6fcb26564e38c5b32388123311277d3d124860ec

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -361,13 +361,10 @@
   "Exchange.Addresss": "Address",
 
   "Footer.Overview": "Overview",
-  "Footer.Send": "Send",
-  "Footer.Nexus": "NXS",
+  "Footer.SendNXS": "Send NXS",
   "Footer.Transactions": "Transactions",
-  "Footer.Market": "Market",
-  "Footer.Data": "Data",
-  "Footer.Address": "Address",
-  "Footer.Book": "Book",
+  "Footer.MarketData": "Market Data",
+  "Footer.AddressBook": "Address Book",
   "Footer.Settings": "Settings",
   "Footer.Console": "Console",
   "Footer.Exchange": "Exchange",
