Should be  the fix for TBR-123.
Former-commit-id: 8aea664d6da48b58c4a5ba874c45f2b660c215c4

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -109,13 +109,14 @@
   "transactions.Page": "Page",
   "transactions.Rows": "Rows",
   "transactions.Pending": "(Pending)",
+  "transactions.UnknownCategory": "Unknown",
   "transactions.NoRowsFound": "No Rows Found",
   "transactions.AllAccounts": "All Accounts",
+  "transactions.PENDINGTR": "PENDING TRANSACTION",
 
   "Market.Information": "Market Information",
   "Market.Refreash": "Refresh Market Data",
   "Market.Refreshing": "Refreshing Market Data...",
-  "transactions.PENDINGTR": "PENDING TRANSACTION",
   "Market.All": "All",
   "Market.Receive": "Receive",
   "Market.Sent": "Sent",
