--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -220,6 +220,14 @@
   "Settings.RescanningDone": "Rescanning done",
   "Settings.Import": "Import",
   "Settings.LoggedIn": "Logged In Successfully",
+  "Settings.SetFee": "Set",
+  "Settings.Browse": "Browse", 
+  "Settings.DarkTheme": "Dark",
+  "Settings.LightTheme": "Light",
+  "Settings.CustomTheme": "Custom",
+  "Settings.ResetTheme": "Reset",
+  "Settings.ExportTheme": "Theme Exported",
+  "Settings.ResetTheme": "Theme has been reset to default",
 
   "Settings.Errors.ManualDaemonUser": "Manual daemon Username is required",
   "Settings.Errors.ManualDaemonPassword": "Manual daemon Password is required",
