--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -220,7 +220,7 @@
   "Settings.RescanningDone": "Rescanning done",
   "Settings.Import": "Import",
   "Settings.LoggedIn": "Logged In Successfully",
-  "Settings.SetFee": "Set",
+  "Settings.SetFeeButton": "Set",
   "Settings.Browse": "Browse", 
   "Settings.DarkTheme": "Dark",
   "Settings.LightTheme": "Light",
