temporarily disabled auto update & check for updates on Mac
Former-commit-id: 668c2daf1a2075aeac18b90f358034f0978b910c

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -220,6 +220,7 @@
   "Settings.RescanningDone": "Rescanning done",
   "Settings.Import": "Import",
   "Settings.LoggedIn": "Logged In Successfully",
+  "Settings.AutoUpdateDisabled": "Auto Update is not yet available on Mac, please update the wallet manually for the time being",
 
   "Settings.Errors.ManualDaemonUser": "Manual daemon Username is required",
   "Settings.Errors.ManualDaemonPassword": "Manual daemon Password is required",
