--- a/app/languages/de.json
+++ b/app/languages/de.json
@@ -6,7 +6,7 @@
   "overview.EncryptedModal": "Ihre Wallet ist nicht verschlüsselt!",
   "overview.Suggestion": "Damit Ihr Nexus sicher ist, sollten Sie Ihre Wallet verschlüsseln.",
   "overview.Ignore": "Ignorieren",
-  "overview.TakeMeThere": "Bring mich dahin",
+  "overview.TakeMeThere": "Jetzt verschlüsseln!",
   "overview.Transactions": "Transaktionen",
   "overview.MarketPrice": "Marktpreis",
   "overview.MarketCap": "Marktkapitalisierung",
@@ -446,8 +446,8 @@
   "Footer.AddressBook": "Adressbuch",
   "Footer.Settings": "Einstellungen",
   "Footer.Console": "Konsole",
-  "Footer.Exchange": "Austausch",
-  "Footer.Trust": "Vertrauen",
+  "Footer.Exchange": "Börse",
+  "Footer.Trust": "Trust",
   "Footer.List": "Liste",
 
   "Header.StakeWeight": "Stake Faktor",
@@ -553,7 +553,7 @@
   "Cp.FHC": "Fußzeilenfarbe beim hervorheben",
   "Cp.FAC": "Aktive Fußzeilenfarbe",
   "Cp.GC": "Farbe der Erde",
-  "Cp.GPC": "Farbe des Standortes",
+  "Cp.GPC": "Farbe der Standorte",
   "Cp.GAC": "Farbe der Verbindungen",
   "Cp.PC": "Primäre Farbe",
   "Cp.PCA": "Primärer Farbton",
