--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -158,7 +158,7 @@
   "AddressBook.Import": "Import Contacts",
   "AddressBook.SearchContact": "Search Contact",
   "AddressBook.MyAddresses": "My Addresses",
-  "AddressBook.addContact": "Add Contact",
+  "AddressBook.addContact": "Create Contact",
   "AddressBook.Name": "Name",
   "AddressBook.ClickToEdit": "Doubleclick To Edit",
   "AddressBook.PhoneNumber": "Phone Number",
@@ -185,6 +185,36 @@
   "AddressBook.Loading": "Please wait for the daemon to load",
   "AddressBook.NoContacts": "No Contacts",
   "AddressBook.NXSAddress": "NXS Address",
+
+  "AddEditContact.Errors.NameRequired": "Name is required",
+  "AddEditContact.Errors.NameExists": "A contact with the same name already exists",
+  "AddEditContact.Errors.NoAddresses": "There must be at least one address",
+  "AddEditContact.Errors.InvalidAddress": "Invalid address",
+  "AddEditContact.Errors.MineAddress": "This is one of your addresses",
+  "AddEditContact.Errors.NotMineAddress": "This is not one of your addresses",
+  "AddEditContact.Errors.InvalidEmail": "Invalid email",
+  "AddEditContact.Name": "Name",
+  "AddEditContact.NamePlaceholder": "Contact Name",
+  "AddEditContact.TheirAddressWithName": "{name}'s Nexus Address",
+  "AddEditContact.TheirAddress": "Their Nexus Address",
+  "AddEditContact.MyAddressFor": "My Nexus Address for {name}",
+  "AddEditContact.MyAddress": "My Nexus Address",
+  "AddEditContact.Label": "Label (optional)",
+  "AddEditContact.RemoveAddress": "Remove address",
+  "AddEditContact.Email": "Email address",
+  "AddEditContact.EmailPlaceholder": "Email address",
+  "AddEditContact.Phone": "Phone number",
+  "AddEditContact.PhonePlaceholder": "Phone number",
+  "AddEditContact.TimeZone": "Time zone",
+  "AddEditContact.TimeZonePlaceholder": "Select a time zone",
+  "AddEditContact.Notes": "Notes",
+  "AddEditContact.NotesPlaceholder": "Notes",
+  "AddEditContact.CreateContact": "Create Contact",
+  "AddEditContact.EditContact": "Edit Contact",
+  "AddEditContact.Cancel": "Cancel",
+  "AddEditContact.Reset": "Reset",
+  "AddEditContact.CreateSuccess": "New contact has been added to Address Book",
+  "AddEditContact.EditSuccess": "Contact has been updated",
 
   "Settings.Settings": "Settings",
   "Settings.Application": "Application",
