--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -58,7 +58,7 @@
   "sendReceive.SelectAnAccount": "Select An Account",
   "sendReceive.FromAccount": "From Account",
   "sendReceive.ToAccount": "ToAccount",
-  "sendReceive.MoveNXS": "Move NXS?",
+  "sendReceive.MoveNXS": "Move NXS",
   "sendReceive.MoveNxsBetweenAccount": "Move NXS between accounts",
   "sendReceive.Contacts": "Contacts",
   "sendReceive.MultipleRecipients": "Send to Multiple Recipients",
