--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -294,7 +294,7 @@
   "Settings.ConfirmLogOut": "Are you sure you want to log out?",
   "Settings.ResetThemeNoti": "Theme has been reset to default",
   "Settings.ResetColorNoti": "Color scheme has been reset to default",
-  "Settings.StarryBackground": "Twinkling Starry Sky",
+  "Settings.StarryBackground": "Twinkling Stars",
   "Settings.LightBackground": "Cosmic Light",
   "Settings.CustomWallpaper": "Custom Wallpaper",
   "Settings.SelectCustomWallpaper": "Select a Custom Wallpaper",
