--- a/translations/fr-changes.json
+++ b/translations/fr-changes.json
@@ -63,7 +63,7 @@
   "Settings.LogOut": "Log Out",
   "Settings.ConfirmLogOut": "Are you sure you want to log out?",
   "Settings.ResetThemeNoti": "Color scheme has been reset to default",
-  "Settings.StarryBackground": "Twinkling Starry Sky",
+  "Settings.StarryBackground": "Twinkling Stars",
   "Settings.LightBackground": "Cosmic Light",
   "Settings.CustomWallpaper": "Custom Wallpaper",
   "Settings.SelectCustomWallpaper": "Select a Custom Wallpaper",
