[WIP] Contact details other info
Former-commit-id: 77ae2765e7085becbf5a594acc0553de56d73aa1

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -163,11 +163,9 @@
   "AddressBook.ClickToEdit": "Doubleclick To Edit",
   "AddressBook.PhoneNumber": "Phone Number",
   "AddressBook.Phone": "Phone #",
-  "AddressBook.Notes": "Notes",
   "AddressBook.AddAddress": "Add Address",
   "AddressBook.BookEmpty": "Your Addressbook Is Empty",
   "AddressBook.EditContact": "Edit Contact",
-  "AddressBook.LocalTime": "Local Time",
   "AddressBook.Cancel": "Cancel",
   "AddressBook.Account": "Account",
   "AddressBook.SearchAccount": "Search By Account",
@@ -185,6 +183,15 @@
   "AddressBook.Loading": "Please wait for the daemon to load",
   "AddressBook.NoContacts": "No Contacts",
   "AddressBook.NXSAddress": "NXS Address",
+  "AddressBook.NexusAddresses": "NXS Addresses",
+  "AddressBook.OtherInfo": "Other Info",
+  "AddressBook.Email": "Email",
+  "AddressBook.PhoneNo": "Phone number",
+  "AddressBook.LocalTime": "Local time",
+  "AddressBook.Notes": "Notes",
+  "AddressBook.NoInfo": "No information",
+  "AddressBook.TheirAddressWithName": "{name}'s Address",
+  "AddressBook.MyAddressFor": "My Address for {name}",
 
   "AddEditContact.Errors.NameRequired": "Name is required",
   "AddEditContact.Errors.NameExists": "A contact with the same name already exists",
