Added Dutch/Nederlands Language #16
Former-commit-id: 1a1233a4e19e728e85b641dce4a4364891c73be0

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -493,6 +493,7 @@
   "Lang.German": "German",
   "Lang.Japanese": "Japanese",
   "Lang.French": "French",
+  "Lang.Dutch": "Dutch",
 
   "Common.UnknownError": "An unknown error occurred"
 }
