--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -194,6 +194,7 @@
   "Settings.SetFee": "Set Transaction Fee?",
   "Settings.Yes": "Yes",
   "Settings.No": "No",
+  "Settings.OverviewDisplay": "Overview Display",
   "Settings.MinimizeTray": "Minimize to tray",
   "Settings.MinimizeClose": "Minimize on close",
   "Settings.InformationPop": "Information Popups",
