--- a/app/languages/fr.json
+++ b/app/languages/fr.json
@@ -197,9 +197,6 @@
   "Settings.BackupWallet": "Sauver le portefeuille",
   "Settings.StartUp": "Lancer au démarrage du système",
   "Settings.ChangesNexTime": "Les changements appliqués au core prendront effet au prochain redémarrage du core",
-  "Settings.ManualDaemonEntry": "Entrer dans le mode manuel du daemon?",
-  "Settings.ManualDaemonExit": "Sortir du mode manuel du daemon?",
-  "Settings.ManualDaemonWarning": "(Ceci va arrêter votre daemon)",
   "Settings.Username": "Nom d'utilisateur",
   "Settings.IpAddress": "Adresse IP",
   "Settings.Port": "Port",
@@ -212,5 +209,206 @@
   "Settings.Language": "Langue",
   "Settings.English": "Anglais",
   "Settings.Russian": "Russe",
-  "Settings.Spanish": "Espagnol"
+  "Settings.Spanish": "Espanol",
+  "Settings.German": "Allemand",
+  "Settings.Japanese": "Japonais",
+  "Settings.Korean": "Coréen",
+  "Settings.French": "Français",
+  "Settings.LangButton": "Français",
+  "Settings.EncryptWallet": "Chiffrer le portefeuille",
+  "Settings.Password": "Mot de passe",
+  "Settings.NewPassword": "Nouveau mot de passe",
+  "Settings.CannotContain": "Le mot de passe ne peut pas contenir ces caractères",
+  "Settings.Re-Enter": "Retaper le mot de passe",
+  "Settings.PasswordsMatch": "Les mots de passe ne correspondent pas",
+
+  "Settings.KeyDisplayHere": "La clé privée sera affichée ici",
+  "Settings.ViewPrivateKey": "Voir clé privée",
+  "Settings.ConfirmPassword": "Confirmez le mot de passe",
+  "Settings.Address": "Adresse",
+  "Settings.EnterAddressHere": "Entrez l'adresse ici",
+  "Settings.PrivateKey": "Clé privée",
+  "Settings.Copy": "Copier",
+  "Settings.Paste": "Coller",
+  "Settings.ImportPrivateKey": "Importer une clé privée",
+  "Settings.AccountName": "Nom du compte",
+  "Settings.Wallpaper": "Sélectionner le fond d'écran",
+  "Settings.RenderGlobe": "Afficher le globe",
+  "Settings.ResetStyle": "Réinitialiser les paramètres de style",
+  "Settings.Color": "Couleur",
+  "Settings.Fiat": "Monnaies Fiat",
+  "Settings.EnableMining": "Activer le Mining",
+  "Settings.EnableStaking": "Activer le Staking",
+  "Settings.VerboseLevel": "Niveau verbose",
+  "Settings.SaveSettings": "Enregistrer les paramètres",
+  "Settings.ManualDaemonMode": "Mode Daemon manuel",
+  "Settings.DDN": "Nom du répertoire de données",
+  "Settings.ChangePassword": "Changer le mot de passe",
+  "Settings.PreviousPassword": "Mot de passe précédent",
+  "Settings.PasswordRequired": "Mot de passe requis",
+  "Settings.NewPasswordIsRequired": "Un nouveau mot de passe est requis",
+  "Settings.ReEnterPassword": "Retaper le mot de passe:",
+  "Settings.NoMatch": "Les mots de passe ne correspondent pas",
+  "Settings.Submit": "Soumettre",
+  "Settings.LockWallet": "Verrouiller le portefeuille",
+  "Settings.ViewPrivateKeyForAddress": "Afficher la clé privée pour l'adresse",
+  "Settings.EncryptRestart": "Chiffrer et redémarrer",
+  "Settings.MinimumConfirmations": "Confirmations minimales",
+  "Settings.Forkblock": "Blocs de fourche",
+  "Settings.ManualDaemonEntry": "Entrer en mode Daemon manuel?",
+  "Settings.ManualDaemonExit": "Quitter le mode Daemon manuel?",
+  "Settings.ManualDaemonWarning": "(Cela va arrêter votre Daemon)",
+  "Settings.Folder": "Répertoire de sauvegarde",
+
+  "Console.CoreOutput": "Sortie de noyau",
+  "Console.Console": "Console",
+  "Console.ClearConsole": "Effacer la console",
+  "Console.Exe": "Exécuter",
+  "Console.MdMode": "Commencé en mode Daemon manuel",
+  "Console.CommandsHere": "Entrez les commandes de la console ici (ex: getinfo, help)",
+
+  "TrustList.TrustList": "Liste de Trust",
+  "TrustList.Address": "Adresse",
+  "TrustList.InterestRate": "Taux d'intérêt",
+  "TrustList.SyncMsg": "Veuillez attendre la synchronisation de votre portefeuille avec le réseau...",
+
+  "Exchange.Exchange": "Échange",
+  "Exchange.ShoutOut": "Propulsé par ShapeShift",
+  "Exchange.Precise": "Précis",
+  "Exchange.Fast": "Vite",
+  "Exchange.Send": "Envoyer",
+  "Exchange.TradeAmount": "Quantité d'échange",
+  "Exchange.MinTrade": "Échange minimum",
+  "Exchange.RefundAddress": "Adresse de remboursement",
+  "Exchange.YouAreSending": "VOUS ENVOYEZ",
+  "Exchange.YouWillReceive": "VOUS ALLEZ RECEVOIR",
+  "Exchange.Receive": "Recevoir",
+  "Exchange.BCAddress": "Adresse",
+  "Exchange.ExecuteTrade": "Exécuter l'échange",
+  "Exchange.QUOTE": "OBTENIR UN DEVIS",
+  "Exchange.NotAvailible": "Cette paire est temporairement indisponible pour les échanges",
+  "Exchange.TradeExceed": "Échange maximum  dépassé",
+  "Exchange.TradeUnMet": "Échange minimum non satisfait",
+  "Exchange.Addresss": "Adresse",
+
+  "Footer.Overview": "Vue d'ensemble",
+  "Footer.Send": "Envoyer",
+  "Footer.Nexus": "NXS",
+  "Footer.Transactions": "Transactions",
+  "Footer.Market": "Marché",
+  "Footer.Data": "Données",
+  "Footer.Address": "Adresse",
+  "Footer.Book": "Livre",
+  "Footer.Settings": "Réglages",
+  "Footer.Console": "Console",
+  "Footer.Exchange": "Échange",
+  "Footer.Trust": "Confiance",
+  "Footer.List": "Liste",
+
+  "Header.StakeWeight": "Stake Weight",
+  "Header.InterestRate": "Interest Rate",
+  "Header.BlockWeight": "Block Weight",
+  "Header.TrustWeight": "Trust Weight",
+  "Header.WalletUnencrypted": "Portefeuille non chiffré",
+  "Header.WalletLocked": "Portefeuille verrouillé",
+  "Header.UnlockedUntil": "Débloqué jusqu'au",
+  "Header.StakingOnly": "Staking uniquement",
+  "Header.Synced": "Synchronisé",
+  "Header.Syncing": "Synchronisation...\nDerrière\n",
+  "Header.Blocks": "Blocs",
+  "Header.DaemonNotLoaded": "Daemon non chargé",
+
+  "ToolTip.GettingNextBlock": "Obtenir le bloc suivant...",
+  "ToolTip.SystemStartUP": "Démarrer automatiquement le portefeuille au démarrage du système",
+  "ToolTip.MinimizeTheWallet": "Réduire le portefeuille dans la barre d'état système",
+  "ToolTip.MinimizeOnClose": "Réduire le portefeuille  au lieu de le fermer lorsque vous fermez la fenêtre",
+  "ToolTip.ShowPopups": "Afficher les bulles d'information",
+  "ToolTip.Usage": "Envoyer des données d'utilisation anonymes pour permettre aux développeurs de Nexus d'améliorer le portefeuille",
+  "ToolTip.OptionalFee": "Frais de transaction facultatifs à inclure dans les transactions. Des montants plus élevés permettront aux transactions d'être traitées plus rapidement, des quantités inférieures pourraient entraîner des frais de transaction supplémentaires.",
+  "ToolTip.DevMode": "Le mode développeur permet à des fonctionnalités avancées d’aider au développement. Après avoir activation, le portefeuille doit être fermé et rouvert pour activer ces fonctionnalités.",
+  "ToolTip.EnableMining": "Activer / désactiver le Mining dans le portefeuille",
+  "ToolTip.EnableStaking": "Activer / désactiver le Staking sur le portefeuille",
+  "ToolTip.Verbose": "Niveau détaillé pour les journaux",
+  "ToolTip.MDM": "Activez le mode Daemon manuel si vous exécutez le Daemon manuellement en dehors du portefeuille",
+  "ToolTip.UserName": "Nom d'utilisateur configuré pour le Daemon manuel",
+  "ToolTip.RenderGlobeOpenGLFail": "Votre ordinateur ne supporte pas OPENGL 2.0",
+  "ToolTip.Password": "Mot de passe configuré pour le Daemon manuel",
+  "ToolTip.IP": "Adresse IP configurée pour le Daemon manuel",
+  "ToolTip.PortConfig": "Port configuré pour le Daemon manuel",
+  "ToolTip.DataDirectory": "Répertoire de données configuré pour le Daemon manuel",
+  "ToolTip.UPnP": "Ouvrez automatiquement le port client Nexus sur le routeur. Cela ne fonctionne que lorsque votre routeur prend en charge UPnP et qu'il est activé.",
+  "ToolTip.Socks4": "Connectez-vous à Nexus via un proxy SOCKS4",
+  "ToolTip.IPAddressofSOCKS4proxy": "Adresse IP du serveur proxy SOCKS4",
+  "ToolTip.PortOfSOCKS4proxyServer": "Port du serveur proxy SOCKS4",
+  "ToolTip.Detach": "Détacher la base de données lors de la fermeture du portefeuille",
+  "ToolTip.RenderGlobe": "Afficher le globe sur la page d'accueil",
+
+  "ToolTip.DbOption": "Souhaitez-vous réduire le temps de synchronisation en téléchargeant une version récente de la base de données?",
+  "ToolTip.BootStrapIt": "Oui, allons-y",
+  "ToolTip.SyncFromScratch": "Non, le laisser se synchroniser à partir de zéro",
+  "ToolTip.RecentDatabaseDownloading": "Téléchargement de la base de données récente",
+  "ToolTip.PleaseWait": "Veuillez patienter...",
+  "ToolTip.RecentDatabaseExtracting": "Extraction de la base de donnée récente",
+  "ToolTip.MinimumConfirmations": "Blank",
+  "ToolTip.ForkBlock": "Reculer d'une quantité de blocs",
+  "ToolTip.ConnectionFailure": "Échec de connexion",
+
+  "ToolTip.TryAgain": "Réessayer?",
+
+  "Alert.Received": "Transaction reçue",
+  "Alert.Sent": "Transaction envoyée",
+  "Alert.Genesis": "Transaction Genesis",
+  "Alert.TrustTransaction": "Transaction de Trust",
+  "Alert.regiesteredToThis": "Ceci est une adresse enregistrée pour ce portefeuille",
+  "Alert.InvalidAddress": "Adresse invalide",
+  "Alert.Invalid": "Invalide",
+  "Alert.AddressAdded": "Adresse ajoutée",
+  "Alert.NoAddresses": "Aucune adresse",
+  "Alert.QueueEmpty": "File d'attente vide",
+  "Alert.PasswordHasBeenChanged": "Le mot de passe a été changé",
+  "Alert.WalletHasBeenEncrypted": "Le portefeuille a été chiffré",
+  "Alert.SettingsSaved": "Paramètres sauvegardés",
+  "Alert.TransactionFeeSet": "Frais de transaction",
+  "Alert.WalletLocked": "Portefeuille verrouillé",
+  "Alert.WalletBackedUp": "Portefeuille sauvegardé",
+  "Alert.InvalidTransactionFee": "Frais de transaction non valides",
+  "Alert.Copied": "Copié",
+  "Alert.StyleSettingsSaved": "Paramètres de style enregistrés",
+  "Alert.NoAmmountSet": "Aucun montant fixé",
+  "Alert.PleaseFillOutField": "Veuillez remplir le champ",
+  "Alert.FutureDate": "Déverrouiller jusqu'à ce que la date et l'heure soient au moins une heure dans le futur",
+  "Alert.IncorrectPasssword": "Mot de passe incorrect",
+  "Alert.CoreSettingsSaved": "Paramètres de base enregistrés",
+  "Alert.ContactsExported": "Contacts exportés",
+  "Alert.DaemonLoadingWait": "Chargement du Daemon, veuillez patienter...",
+  "Alert.InvalidAmount": "Montant invalide",
+  "Alert.CoreRestarting": "Redémarrage du noyau",
+  "Alert.AccountsAreTheSame": "Les comptes sont identiques",
+  "Alert.NoSecondAccountChosen": "Aucun second compte sélectionné",
+  "Alert.InsufficientFunds": "Fonds insuffisants",
+  "Alert.nodefaultname": "Le compte ne peut pas être nommé * ou par défaut",
+  "Alert.ManualDaemonDown": "Le Daemon manuel est en panne",
+
+  "Cp.AC1": "Couleur d'accent 1",
+  "Cp.AC2": "Couleur d'accent 2",
+  "Cp.THC": "Couleur d'en-tête de table",
+  "Cp.TTC": "Couleur de l'info-bulle",
+  "Cp.TC": "Couleur du texte",
+  "Cp.PBC": "Couleur de fond du panneau",
+  "Cp.NLC": "Couleur du logo Nexus",
+  "Cp.SIC": "Couleur de l'icône d'état",
+  "Cp.FBC": "Couleur de base du pied de page",
+  "Cp.FHC": "Couleur du pied de page au survol",
+  "Cp.FAC": "Pied de page couleur active",
+  "Cp.GC": "Couleur du globe",
+  "Cp.GPC": "Couleur des pilliers",
+  "Cp.GAC": "Couleur des courbes",
+
+  "Lang.English": "Anglais",
+  "Lang.Russian": "Russe",
+  "Lang.Spanish": "Espanol",
+  "Lang.Korean": "Coréen",
+  "Lang.German": "Allemand",
+  "Lang.Japanese": "Japonais",
+  "Lang.French": "Français"
 }
