--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -192,6 +192,9 @@
   "AddressBook.NoInfo": "No information",
   "AddressBook.TheirAddressWithName": "{name}'s Address",
   "AddressBook.MyAddressFor": "My Address for {name}",
+  "AddressBook.Delete": "Delete",
+  "AddressBook.Edit": "Edit",
+  "AddressBook.DeleteQuestion": "Delete contact {name}?",
 
   "AddEditContact.Errors.NameRequired": "Name is required",
   "AddEditContact.Errors.NameExists": "A contact with the same name already exists",
@@ -218,6 +221,8 @@
   "AddEditContact.NotesPlaceholder": "Notes",
   "AddEditContact.CreateContact": "Create Contact",
   "AddEditContact.EditContact": "Edit Contact",
+  "AddEditContact.Create": "Create",
+  "AddEditContact.Update": "Update",
   "AddEditContact.Cancel": "Cancel",
   "AddEditContact.Reset": "Reset",
   "AddEditContact.CreateSuccess": "New contact has been added to Address Book",
