various updates for Address Book
Former-commit-id: 72ac78c622b9b09fe9139f6412dad3bc89186c96

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -158,7 +158,8 @@
   "AddressBook.Import": "Import Contacts",
   "AddressBook.SearchContact": "Search Contact",
   "AddressBook.MyAddresses": "My Addresses",
-  "AddressBook.addContact": "Create Contact",
+  "AddressBook.CreateContact": "Create Contact",
+  "AddressBook.NewContact": "New Contact",
   "AddressBook.Name": "Name",
   "AddressBook.ClickToEdit": "Doubleclick To Edit",
   "AddressBook.PhoneNumber": "Phone Number",
@@ -219,7 +220,7 @@
   "AddEditContact.TimeZonePlaceholder": "Select a time zone",
   "AddEditContact.Notes": "Notes",
   "AddEditContact.NotesPlaceholder": "Notes",
-  "AddEditContact.CreateContact": "Create Contact",
+  "AddEditContact.CreateNewContact": "Create New Contact",
   "AddEditContact.EditContact": "Edit Contact",
   "AddEditContact.Create": "Create",
   "AddEditContact.Update": "Update",
