Edit & Delete button re-positioning
Former-commit-id: 814316d0aa37130b2a6f127c8d26a77bdfab4055

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -178,6 +178,8 @@
   "AddressBook.Back": "Back",
   "AddressBook.TheirAddresses": "Their Addresses",
   "AddressBook.Address": "Address",
+  "AddressBook.AddressesCountSingular": "{count} Address",
+  "AddressBook.AddressesCountPlural": "{count} Addresses",
   "AddressBook.Addresses": "Addresses",
   "AddressBook.MyAccount": "My Account",
   "AddressBook.EnterAddressName": "Enter Address Name",
