[TBR-139] removed the ! from the empty message & fixed the link callback
Former-commit-id: 94493d9e46f5be840198e6a319fc8b50a6c77996

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -153,6 +153,8 @@
   "AddressBook.DeleteAddress": "Delete Address",
 
   "AddressBook.AddressBook": "Address Book",
+  "AddressBook.Empty": "Your Address Book is empty",
+  "AddressBook.CreateNewContact": "Create New Contact",
   "AddressBook.searchC": "Search Account",
   "AddressBook.Export": "Export Contacts",
   "AddressBook.Import": "Import Contacts",
