--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -189,7 +189,7 @@
   "AddressBook.NoContacts": "No Contacts",
   "AddressBook.NXSAddress": "NXS Address",
   "AddressBook.NexusAddresses": "NXS Addresses",
-  "AddressBook.OtherInfo": "Other Info",
+  "AddressBook.ContactInfo": "Contact Info",
   "AddressBook.Email": "Email",
   "AddressBook.PhoneNo": "Phone number",
   "AddressBook.LocalTime": "Local time",
