disables add & edit when daemon is not loaded
Former-commit-id: e6b1d92984c4f9dfd1890558ebb50b537c929da9

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -227,7 +227,7 @@
   "AddEditContact.CreateNewContact": "Create New Contact",
   "AddEditContact.EditContact": "Edit Contact",
   "AddEditContact.Create": "Create",
-  "AddEditContact.Update": "Update",
+  "AddEditContact.SaveChanges": "Save Changes",
   "AddEditContact.Cancel": "Cancel",
   "AddEditContact.Reset": "Reset",
   "AddEditContact.CreateSuccess": "New contact has been added to Address Book",
