Transactions page adapting to new address book schema
Former-commit-id: 708b18ebf0eed37bad3e499b04d595de38de312a

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -425,6 +425,7 @@
   "Footer.Transactions": "Transactions",
   "Footer.MarketData": "Market Data",
   "Footer.AddressBook": "Address Book",
+  "Footer.Address": "Address",
   "Footer.Settings": "Settings",
   "Footer.Console": "Console",
   "Footer.Exchange": "Exchange",
