--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -501,6 +501,7 @@
   "Alert.WalletBackedUp": "Wallet Backed Up",
   "Alert.InvalidTransactionFee": "Invalid Transaction Fee",
   "Alert.Copied": "Copied to clipboard",
+  "Alert.AddressCopied": "Address has been copied to clipboard",
   "Alert.StyleSettingsSaved": "Style Settings Saved",
   "Alert.NoAmmountSet": "No Amount Set",
   "Alert.PleaseFillOutField": "Please Fill Out Field",
