rephrased "Login for staking & mining only"
Former-commit-id: e1d82dfe89cbf4b6c1a42ee464312d460fbbfd3c

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -312,7 +312,7 @@
   "Settings.LoginDate": "Login Until Date",
   "Settings.LoginTime": "Login Until Time",
   "Settings.PasswordPlaceholder": "Your wallet password",
-  "Settings.StakingOnly": "Login for Staking Only",
+  "Settings.StakingOnly": "Login for Staking & Mining Only",
 
   "Settings.IpAddress": "IP Address",
   "Settings.Port": "Port",
