sync status back into the tooltip
Former-commit-id: dd5ddf05984b7d84c8038139a4bc737e45e9821a

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -448,7 +448,7 @@
   "Header.UnlockedUntil": "Logged in until {unlockDate}",
   "Header.StakingOnly": "for staking only",
   "Header.Synced": "Synchronized",
-  "Header.Syncing": "Synchronizing...",
+  "Header.Syncing": "Synchronizing... {percent}%",
   "Header.Blocks": "Blocks",
   "Header.DaemonNotLoaded": "Daemon Not Loaded",
 
