Added New Translation Changes files
Former-commit-id: 255d56143c98ac3b21e38db12590df73d7ba1398

--- a/translations/nl-changes.json
+++ b/translations/nl-changes.json
@@ -63,23 +63,15 @@
   "AddEditContact.CreateSuccess": "New contact has been added to Address Book",
   "AddEditContact.EditSuccess": "Contact has been updated",
   "Settings.OverviewDisplay": "Overview Display",
-  "Settings.AutoUpdate": "Auto Update (Recommended)",
   "Settings.AutoUpdateNote": "Automatically check for new versions and notify if a new version is available",
-  "Settings.DisableAutoUpdate": "Are you sure you want to disable Auto Update?",
   "Settings.DisableAutoUpdateNote": "Keeping your wallet up-to-date is important for your security and will ensure that you get the best possible user experience",
-  "Settings.KeepAutoUpdate": "Keep Auto Update On",
-  "Settings.TurnOffAutoUpdate": "Turn Auto Update Off",
   "Settings.DaemonLoading": "Please wait for the daemon to load",
   "Settings.SettingsSaved": "Settings Saved",
   "Settings.SavingSettings": "Saving Settings...",
   "Settings.RestartingDaemon": "Restarting daemon...",
   "Settings.PrivKeyImported": "Private key imported. Rescanning now",
-  "Settings.Rescanning": "Rescanning...",
-  "Settings.RescanningDone": "Rescanning done",
-  "Settings.Import": "Import",
   "Settings.LoggedIn": "Logged In Successfully",
   "Settings.SetFeeButton": "Set",
-  "Settings.Browse": "Browse",
   "Settings.DarkTheme": "Dark",
   "Settings.LightTheme": "Light",
   "Settings.CustomTheme": "Custom",
@@ -127,14 +119,11 @@
   "Settings.SelectCustomWallpaper": "Select a Custom Wallpaper",
   "Settings.BackupDir": "Backup Directory",
   "Settings.SelectBackupDirectory": "Select Backup Directory",
-  "Settings.PickThemeFile": "Import Custom Theme",
   "Settings.ThemeFileExport": "Export Custom Theme",
   "Settings.Background": "Background",
   "Settings.BackgroundSubLabel": "Customize your background wallpaper",
   "Settings.ColorScheme": "Color scheme",
-  "Settings.SelectCustomTheme": "Select Custom Theme File",
-  "Exchange.PreciseExplanation": "Trade at exact exchange rate",
-  "Exchange.FastExplanation": "Trade now",
+  "Exchange.Addresss": "Address",
   "MyAddressesModal.Rescan": "Rescan wallet",
   "MyAddressesModal.Rescanning": "Rescanning...",
   "MyAddressesModal.RescanSuccess": "Rescanned successfully",
@@ -143,14 +132,7 @@
   "Footer.SendNXS": "Send NXS",
   "Footer.MarketData": "Market Data",
   "Footer.AddressBook": "Address Book",
-  "ToolTip.NotEnoughSpace": "Not enough Disk space! Minimum 20GB of free space is required.",
-  "ToolTip.DatabaseDownloadSpead": "Download Speed: ",
-  "Alert.registeredToThis": "This is an address registered to this wallet",
   "Alert.AddressCopied": "Address has been copied to clipboard",
-  "Cp.PC": "Primary Color",
-  "Cp.PCA": "Primary Color Accent",
-  "Cp.ER": "Error Color",
-  "Cp.ERA": "Error Color Accent",
   "Lang.Dutch": "Dutch",
   "Common.UnknownError": "An unknown error occurred"
 }
