--- a/translations/de-changes.json
+++ b/translations/de-changes.json
@@ -1,88 +1,63 @@
 {
-  "sendReceive.SendFrom": "Send From",
-  "sendReceive.SendTo": "Send To",
-  "sendReceive.RecipientAddress": "Recipient Address",
-  "sendReceive.AddRecipient": "Add recipient",
-  "sendReceive.RemoveRecipient": "Remove recipient",
-  "sendReceive.MultipleRecipients": "Send to Multiple Recipients",
-  "sendReceive.Messages.NoAccounts": "No accounts selected",
-  "sendReceive.Messages.NoRecipient": "There must be at least one recipient",
-  "sendReceive.Messages.SameAccount": "Cannot move to the same account",
-  "sendReceive.Messages.ErrorMoving": "Error Moving NXS",
-  "sendReceive.Messages.ErrorSending": "Error Sending NXS",
-  "sendReceive.Messages.NotLoggedIn": "You are not logged in",
-  "sendReceive.Messages.NotLoggedInNote": "You need to log in to your wallet before sending transactions",
-  "sendReceive.Messages.LogInNow": "Log in now",
-  "sendReceive.Messages.Success": "NXS moved successfully",
-  "Settings.AutoUpdate": "Auto Update (Recommended)",
-  "Settings.AutoUpdateNote": "Automatically check for new versions and notify if a new version is available",
-  "Settings.DisableAutoUpdate": "Are you sure you want to disable Auto Update?",
-  "Settings.DisableAutoUpdateNote": "Keeping your wallet up-to-date is important for your security and will ensure that you get the best possible user experience",
-  "Settings.KeepAutoUpdate": "Keep Auto Update On",
-  "Settings.TurnOffAutoUpdate": "Turn Auto Update Off",
-  "Settings.DaemonLoading": "Please wait for the daemon to load",
-  "Settings.SettingsSaved": "Settings Saved",
-  "Settings.SavingSettings": "Saving Settings...",
-  "Settings.RestartingDaemon": "Restarting daemon...",
-  "Settings.PrivKeyImported": "Private key imported. Rescanning now",
-  "Settings.Rescanning": "Rescanning...",
-  "Settings.RescanningDone": "Rescanning done",
-  "Settings.Import": "Import",
-  "Settings.LoggedIn": "Logged In Successfully",
-  "Settings.Errors.ManualDaemonUser": "Manual daemon Username is required",
-  "Settings.Errors.ManualDaemonPassword": "Manual daemon Password is required",
-  "Settings.Errors.ManualDaemonIP": "Manual daemon IP is required",
-  "Settings.Errors.ManualDaemonPort": "Manual daemon Port is required",
-  "Settings.Errors.ManualDaemonDataDir": "Data directory is required",
-  "Settings.Errors.Socks4PoxyIP": "SOCKS4 proxy IP is required",
-  "Settings.Errors.Socks4PoxyPort": "SOCKS4 proxy Port is required",
-  "Settings.Errors.SettingTxFee": "Error setting Transaction Fee",
-  "Settings.Errors.LoggingOut": "Error logging out",
-  "Settings.Errors.ChangingPassword": "Error changing password",
-  "Settings.Errors.PasswordRequired": "Password is required",
-  "Settings.Errors.PasswordInvalidChars": "Password cannot contain these characters: - $ / & * | < >",
-  "Settings.Errors.PasswordMinLength": "Password must be at least 8 characters",
-  "Settings.Errors.PasswordsNoMatch": "Passwords do not match",
-  "Settings.Errors.PasswordSpaces": "Password cannot start or end with spaces",
-  "Settings.Errors.EncryptingWallet": "Error encrypting wallet",
-  "Settings.Errors.AccountName": "Account name is required",
-  "Settings.Errors.PrivateKey": "Private key is required",
-  "Settings.Errors.Rescanning": "Error rescanning",
-  "Settings.Errors.ImportingPrivKey": "Error importing private key",
-  "Settings.Errors.LoginDate": "Date is required",
-  "Settings.Errors.LoginTime": "Time is required",
-  "Settings.Errors.LoginPassword": "Password is required",
-  "Settings.Errors.LoggingIn": "Error logging in",
-  "Settings.Errors.AddressEmpty": "Address cannot be empty",
-  "Settings.Errors.ViewPrivKey": "Error getting private key",
-  "Settings.Errors.InvalidJSON": "Invalid file format! Custom theme file must be in JSON",
-  "Settings.LoginDate": "Login Until Date",
-  "Settings.LoginTime": "Login Until Time",
-  "Settings.PasswordPlaceholder": "Your wallet password",
-  "Settings.StakingOnly": "Login for Staking Only",
-  "Settings.LogOut": "Log Out",
-  "Settings.ConfirmLogOut": "Are you sure you want to log out?",
-  "Settings.ResetThemeNoti": "Color scheme has been reset to default",
-  "Settings.StarryBackground": "Twinkling Stars",
-  "Settings.LightBackground": "Cosmic Light",
-  "Settings.CustomWallpaper": "Custom Wallpaper",
-  "Settings.SelectCustomWallpaper": "Select a Custom Wallpaper",
-  "Settings.BackupDir": "Backup Directory",
-  "Settings.SelectBackupDirectory": "Select Backup Directory",
-  "Settings.ThemeFileExport": "Export Custom Theme",
-  "Settings.Background": "Background",
-  "Settings.BackgroundSubLabel": "Customize your background wallpaper",
-  "Settings.ColorScheme": "Color scheme",
-  "Settings.SelectCustomTheme": "Select Custom Theme File",
-  "Exchange.PreciseExplanation": "Trade at exact exchange rate",
-  "Exchange.FastExplanation": "Trade now",
-  "Exchange.BCAddress": "Address",
-  "Header.Syncing": "Synchronizing...",
-  "ToolTip.ForkBlock": "Step Back A Amount of Blocks",
-  "ToolTip.NotEnoughSpace": "Not enough Disk space! Minimum 20GB of free space is required.",
-  "ToolTip.DatabaseDownloadSpead": "Download Speed: ",
-  "Alert.registeredToThis": "This is an address registered to this wallet",
-  "Cp.ER": "Error Color",
-  "Cp.ERA": "Error Color Accent",
-  "Common.UnknownError": "An unknown error occurred"
+  "overview.PrimeDiff": "Prime difficulty",
+  "overview.HashDiff": "Hash difficulty",
+  "overview.StakeDiff": "Stake difficulty",
+  "transactions.UnknownCategory": "Unknown",
+  "AddressBook.Empty": "Your Address Book is empty",
+  "AddressBook.CreateNewContact": "Create New Contact",
+  "AddressBook.CreateContact": "Create Contact",
+  "AddressBook.NewContact": "New Contact",
+  "AddressBook.AddressesCountSingular": "{count} Address",
+  "AddressBook.AddressesCountPlural": "{count} Addresses",
+  "AddressBook.NexusAddresses": "NXS Addresses",
+  "AddressBook.ContactInfo": "Contact Info",
+  "AddressBook.Email": "Email",
+  "AddressBook.PhoneNo": "Phone number",
+  "AddressBook.NoInfo": "No information",
+  "AddressBook.TheirAddressWithName": "{name}'s Address",
+  "AddressBook.MyAddressFor": "My Address for {name}",
+  "AddressBook.Delete": "Delete",
+  "AddressBook.Edit": "Edit",
+  "AddressBook.DeleteQuestion": "Delete contact {name}?",
+  "AddEditContact.Errors.NameRequired": "Name is required",
+  "AddEditContact.Errors.NameExists": "A contact with the same name already exists",
+  "AddEditContact.Errors.NoAddresses": "There must be at least one address",
+  "AddEditContact.Errors.InvalidAddress": "Invalid address",
+  "AddEditContact.Errors.MineAddress": "This is one of your addresses",
+  "AddEditContact.Errors.NotMineAddress": "This is not one of your addresses",
+  "AddEditContact.Errors.InvalidEmail": "Invalid email",
+  "AddEditContact.Name": "Name",
+  "AddEditContact.NamePlaceholder": "Contact Name",
+  "AddEditContact.TheirAddressWithName": "{name}'s Nexus Address",
+  "AddEditContact.TheirAddress": "Their Nexus Address",
+  "AddEditContact.MyAddressFor": "My Nexus Address for {name}",
+  "AddEditContact.MyAddress": "My Nexus Address",
+  "AddEditContact.Label": "Label (optional)",
+  "AddEditContact.RemoveAddress": "Remove address",
+  "AddEditContact.Email": "Email address",
+  "AddEditContact.EmailPlaceholder": "Email address",
+  "AddEditContact.Phone": "Phone number",
+  "AddEditContact.PhonePlaceholder": "Phone number",
+  "AddEditContact.TimeZone": "Time zone",
+  "AddEditContact.TimeZonePlaceholder": "Select a time zone",
+  "AddEditContact.Notes": "Notes",
+  "AddEditContact.NotesPlaceholder": "Notes",
+  "AddEditContact.CreateNewContact": "Create New Contact",
+  "AddEditContact.EditContact": "Edit Contact",
+  "AddEditContact.Create": "Create",
+  "AddEditContact.SaveChanges": "Save Changes",
+  "AddEditContact.Cancel": "Cancel",
+  "AddEditContact.Reset": "Reset",
+  "AddEditContact.CreateSuccess": "New contact has been added to Address Book",
+  "AddEditContact.EditSuccess": "Contact has been updated",
+  "Settings.OverviewDisplay": "Overview Display",
+  "Settings.AutoUpdateDisabled": "Auto Update is not yet available on Mac, please update the wallet manually for the time being",
+  "MyAddressesModal.Rescan": "Rescan wallet",
+  "MyAddressesModal.Rescanning": "Rescanning...",
+  "MyAddressesModal.RescanSuccess": "Rescanned successfully",
+  "MyAddressesModal.RescanError": "Error Rescanning",
+  "MyAddressesModal.RescanTooltip": "The balances shown here could be incorrect in some rare cases, rescanning will help you correct them",
+  "Footer.Address": "Address",
+  "Alert.AddressCopied": "Address has been copied to clipboard",
+  "Lang.Dutch": "Dutch"
 }
