--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -522,6 +522,7 @@
   "Alert.NoSecondAccountChosen": "No second account chosen",
   "Alert.InsufficientFunds": "Insufficient funds",
   "Alert.ManualDaemonDown": "Manual Daemon Is Down",
+  "Alert.ClosingNexus": "Closing Nexus Wallet",
 
   "Cp.AC1": "Accent Color 1",
   "Cp.AC2": "Accent Color 2",
