address book empty message fro Send NXS recipient field
Former-commit-id: 6b58530e8c19b289c97047ed2f22717b3d75593b

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -43,6 +43,8 @@
   "sendReceive.EnterYourMessage": "Enter Your Message",
   "sendReceive.Lookup": "Lookup Address",
   "sendReceive.Name": "Name",
+  "sendReceive.AddressBookEmpty": "Your address book is empty",
+  "sendReceive.CreateNewContact": "Create new contact",
   "sendReceive.Cancel": "Cancel",
   "sendReceive.Yes": "Yes",
   "sendReceive.SendTransaction": "Send Transaction?",
