--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -495,6 +495,7 @@
   "Alert.Genesis": "Genesis Transaction",
   "Alert.TrustTransaction": "Trust Transaction",
   "Alert.registeredToThis": "This is an address registered to this wallet",
+  "Alert.AddressEmpty": "Address is required",
   "Alert.InvalidAddress": "Invalid Address",
   "Alert.InvalidAmount": "Invalid Amount",
   "Alert.Invalid": "Invalid",
