Renamed "Loading Daemon, please wait" to "Loading Wallet, please wait"
Former-commit-id: 7ff869f86cd56e97f253eadb5a611b97cef775a7

--- a/app/languages/de.json
+++ b/app/languages/de.json
@@ -520,7 +520,7 @@
   "Alert.IncorrectPasssword": "Falsches Passwort",
   "Alert.CoreSettingsSaved": "Core Einstellungen gespeichert",
   "Alert.ContactsExported": "Kontakte exportiert",
-  "Alert.DaemonLoadingWait": "Daemon wird geladen, bitte warten",
+  "Alert.DaemonLoadingWait": "Wallet wird geladen, bitte warten",
   "Alert.InvalidAmount": "Unglültiger Betrag",
   "Alert.CoreRestarting": "Daemon Neustart...",
   "Alert.AccountsAreTheSame": "Die Konten sind identisch",
