Fixed issue with history json, added csv labels to en.json
Former-commit-id: 59e825e48f8c72e86435663c31ace4186a54e67d

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -115,6 +115,8 @@
   "transactions.NoRowsFound": "No Rows Found",
   "transactions.AllAccounts": "All Accounts",
   "transactions.PENDINGTR": "PENDING TRANSACTION",
+  "transactions.CSVDownloadModalCancel": "Cancel",
+  "transactions.CSVDownloadModalTitle": "Processing CSV",
 
   "Market.Information": "Market Information",
   "Market.Refreash": "Refresh Market Data",
