Modules listing UI
Former-commit-id: 6a5ee1ccae2c807dbf7bd753e9eeaf2d3aacfe35

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -242,6 +242,7 @@
   "Settings.Core": "Core",
   "Settings.Security": "Security",
   "Settings.Style": "Style",
+  "Settings.Modules": "Modules",
   "Settings.SetFee": "Set Transaction Fee?",
   "Settings.Yes": "Yes",
   "Settings.No": "No",
