--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -286,7 +286,7 @@
   "Settings.ExportTheme": "Theme Exported",
   "Settings.AutoUpdateDisabled": "Auto Update is not yet available on Mac, please update the wallet manually for the time being",
   "Settings.EnforceOpenSourceModules": "Only allow open source modules",
-  "Settings.EnforceOpenSourceModulesNote": "Only allow modules which have valid open source repositories. You can disable this option to test run the modules that you're developing. Take effect after wallet restart",
+  "Settings.EnforceOpenSourceModulesNote": "Only allow modules which have valid open source repositories. You can disable this option to test run the modules that you're developing",
 
   "Settings.Errors.ManualDaemonUser": "Manual daemon Username is required",
   "Settings.Errors.ManualDaemonPassword": "Manual daemon Password is required",
