couple of quick fixes
Former-commit-id: 85ff4953865fec5c75731f9ea751985c4763a913

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -454,6 +454,7 @@
   "Header.WalletUnencrypted": "Wallet Unencrypted",
   "Header.WalletLocked": "Not logged in",
   "Header.UnlockedUntil": "Logged in until {unlockDate}",
+  "Header.WalletUnlocked": "Logged in",
   "Header.StakingOnly": "for staking only",
   "Header.Synced": "Synchronized",
   "Header.Syncing": "Synchronizing... {percent}%",
@@ -479,7 +480,7 @@
   "ToolTip.IP": "IP address configured for manual daemon",
   "ToolTip.PortConfig": "Port configured for manual daemon",
   "ToolTip.DataDirectory": "Data directory configured for manual daemon",
-  "ToolTip.UPnP": "Automatically open the Nexus client port on the router. This only works when your router supports UPnP and it is enabled",
+  "ToolTip.UPnP": "Automatically open the  client port on the router. This only works when your router supports UPnP and it is enabled",
   "ToolTip.Socks4": "Connect to Nexus through a SOCKS4 proxy",
   "ToolTip.IPAddressofSOCKS4proxy": "IP Address of SOCKS4 proxy server",
   "ToolTip.PortOfSOCKS4proxyServer": "Port of SOCKS4 proxy server",
