cool daemon phrasing
Former-commit-id: 39f94abd8f48b5c9323e6a346e3058fd3c3f5f27

--- a/app/languages/es.json
+++ b/app/languages/es.json
@@ -163,7 +163,7 @@
   "AddressBook.Addresses": "Direcciones",
   "AddressBook.MyAccount": "Mi cuenta",
   "AddressBook.EnterAddressName": "Ingrese el nombre de la dirección",
-  "AddressBook.Loading": "Please wait for the daemon to load",
+  "AddressBook.Loading": "Loading wallet, please wait",
   "AddressBook.NoContacts": "Sin contactos",
   "AddressBook.NXSAddress": "Dirección NXS",
 
