--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -106,7 +106,7 @@
   "transactions.Received": "Received",
   "transactions.AMOUNT": "Amount: ",
   "transactions.TIME": "Time: ",
-  "transactions.Loading": "Please wait for the daemon to load",
+  "transactions.Loading": "Loading wallet, please wait",
   "transactions.MyAddress": "My Address",
   "transactions.Page": "Page",
   "transactions.Rows": "Rows",
@@ -189,7 +189,7 @@
   "AddressBook.Addresses": "Addresses",
   "AddressBook.MyAccount": "My Account",
   "AddressBook.EnterAddressName": "Enter Address Name",
-  "AddressBook.Loading": "Please wait for the daemon to load",
+  "AddressBook.Loading": "Loading wallet, please wait",
   "AddressBook.NoContacts": "No Contacts",
   "AddressBook.NXSAddress": "NXS Address",
   "AddressBook.NexusAddresses": "NXS Addresses",
@@ -266,7 +266,7 @@
   "Settings.DisableAutoUpdateNote": "Keeping your wallet up-to-date is important for your security and will ensure that you get the best possible user experience",
   "Settings.KeepAutoUpdate": "Keep Auto Update On",
   "Settings.TurnOffAutoUpdate": "Turn Auto Update Off",
-  "Settings.DaemonLoading": "Please wait for the daemon to load",
+  "Settings.DaemonLoading": "Loading wallet, please wait",
   "Settings.SettingsSaved": "Settings Saved",
   "Settings.SavingSettings": "Saving Settings...",
   "Settings.SaveSettings": "Save Settings",
