some quick fixes for TBR 222-223-224
Former-commit-id: c45ef8e82feddb0824916caa951dee1b203409c6

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -118,8 +118,8 @@
   "transactions.CSVDownloadModalCancel": "Cancel",
   "transactions.CSVDownloadModalTitle": "Processing CSV",
 
-  "Market.Information": "Market Information",
-  "Market.Refreash": "Refresh Market Data",
+  "Market.Information": "Market Data",
+  "Market.Refreash": "Refresh",
   "Market.Refreshing": "Refreshing Market Data...",
   "Market.All": "All",
   "Market.Receive": "Receive",
