fix for TBR 230 & 231
Former-commit-id: d3b06888e0ae7c3aa994a6f3f19f406b3cf0beeb

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -307,6 +307,7 @@
   "Settings.Errors.ImportingPrivKey": "Error importing private key",
   "Settings.Errors.LoginDate": "Date is required",
   "Settings.Errors.LoginTime": "Time is required",
+  "Settings.Errors.LoginTimeTooClose": "Time must be at least one hour in the future",
   "Settings.Errors.LoginPassword": "Password is required",
   "Settings.Errors.LoggingIn": "Error logging in",
   "Settings.Errors.AddressEmpty": "Address cannot be empty",
