--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -286,8 +286,8 @@
   "Settings.ResetTheme": "Reset",
   "Settings.ExportTheme": "Theme Exported",
   "Settings.AutoUpdateDisabled": "Auto Update is not yet available on Mac, please update the wallet manually for the time being",
-  "Settings.EnforceOpenSourceModules": "Only allow open source modules",
-  "Settings.EnforceOpenSourceModulesNote": "Only allow modules which have valid open source repositories. You can disable this option to test run the modules that you're developing",
+  "Settings.EnforceOpenSourceModules": "Module open source policy",
+  "Settings.EnforceOpenSourceModulesNote": "Only modules which have valid open source repositories are allowed to be installed and run. You can disable this option to test run the modules that you're developing",
 
   "Settings.Errors.ManualDaemonUser": "Manual Daemon Username is required",
   "Settings.Errors.ManualDaemonPassword": "Manual Daemon Password is required",
