Added Generate and Immature to the eng file and added main.dev and preload.dev to ignore file.
Former-commit-id: 147289a7e4ed2fec42a3b99196580b7c02c7323c

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -88,6 +88,8 @@
   "transactions.Sent": "Sent",
   "transactions.Genesis": "Genesis",
   "transactions.Trust": "Trust",
+  "transactions.Generate": "Generate",
+  "transactions.Immature": "Immature",
   "transactions.MinimumAmount": "Min amount",
   "transactions.TimeSpan": "Time Span",
   "transactions.PastYear": "Past Year",
