Added Stake to Transactions Table, and added Generate/State/Immature to category filter
Former-commit-id: ba4ff1917ba41a9f56aa4ac17f46a4d2b9e1d327

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -91,6 +91,7 @@
   "transactions.Trust": "Trust",
   "transactions.Generate": "Generate",
   "transactions.Immature": "Immature",
+  "transactions.Stake": "Stake",
   "transactions.MinimumAmount": "Min amount",
   "transactions.TimeSpan": "Time Span",
   "transactions.PastYear": "Past Year",
