Fixed spelling mistake on sycning
Former-commit-id: 5cf89f84c1847fa171f840c0e70678ed28bd22f3

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -407,7 +407,7 @@
   "TrustList.TrustList": "Trust List",
   "TrustList.Address": "Address",
   "TrustList.InterestRate": "Stake Reward",
-  "TrustList.SyncMsg": "Synching Please Wait",
+  "TrustList.SyncMsg": "Syncing Please Wait",
 
   "Exchange.Exchange": "Exchange",
   "Exchange.ShoutOut": "Powered by ShapeShift",
