Stake Reward -> Stake Rate
Former-commit-id: b0dce33e38e2db3ccb66b9016bf1b7c9591d8618

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -18,7 +18,7 @@
   "overview.24hrChange": "24hr Change",
   "overview.Connections": "Connections",
   "overview.BlockCount": "Block Count",
-  "overview.InterestRate": "Stake Reward",
+  "overview.InterestRate": "Stake Rate",
   "overview.StakeWeight": "Stake Weight",
   "overview.Globe": "Globe Includes GeoLite2",
 
